<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">C++ Quiz App</string>
    <string name="welcome_title">C++ 11-21 Quiz</string>
    <string name="welcome_subtitle">Test your knowledge of modern C++ features</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question_counter">Question %1$d of %2$d</string>
    <string name="next_question">Next Question</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="results_title">Quiz Results</string>
    <string name="score">Score: %1$d / %2$d</string>
    <string name="percentage">%1$d%%</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="back_to_home">Back to Home</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="explanation">Explanation:</string>
    <string name="cpp_version">C++ %1$s</string>
    <string name="results">Results</string>
    <string name="question_text_goes_here">Question text goes here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>

    <!-- Settings strings -->
    <string name="settings_title">Settings</string>
    <string name="settings">Settings</string>
    <string name="pref_category_quiz">Quiz Settings</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_feedback">Feedback</string>
    <string name="pref_question_count_title">Number of Questions</string>
    <string name="pref_question_count_summary">Choose how many questions per quiz</string>
    <string name="pref_dark_mode_title">Dark Mode</string>
    <string name="pref_dark_mode_summary">Enable dark theme</string>
    <string name="pref_sound_title">Sound Effects</string>
    <string name="pref_sound_summary">Play sounds for correct/incorrect answers</string>
    <string name="pref_vibration_title">Vibration</string>
    <string name="pref_vibration_summary">Vibrate on answer feedback</string>
    <string name="quiz_feedback_attribution">Quiz Feedback</string>
    
    <!-- Category selection strings -->
    <string name="category_selection_title">Choose a Category</string>
    <string name="category_selection_subtitle">Select a C++ version or topic category to focus your quiz</string>
    <string name="category_all">All Questions</string>
    <string name="select_category">Select a category</string>
    <string name="select_cpp_version">Select C++ Version</string>
    <string name="selected_category">Category: %s</string>
    <string name="all_categories">All Categories</string>
    <string name="back">Back</string>
    <string name="core_cpp">Core C++</string>
    <string name="cpp_versions_label">C++ Versions</string>
    <string name="category_cpp_26">C++ 26</string>
    <string name="category_cpp_23">C++ 23</string>
    <string name="category_cpp_20">C++ 20</string>
    <string name="category_cpp_17">C++ 17</string>
    <string name="category_cpp_14">C++ 14</string>
    <string name="category_cpp_11">C++ 11</string>
    <string name="core_cpp_label">Core C++</string>
    <string name="category_core_cpp">Core C++ Fundamentals</string>
    <string name="categories_label">Topic Categories</string>
    <string name="category_language_features">Language Features</string>
    <string name="category_concurrency">Concurrency</string>
    <string name="category_collections">Collections</string>
    <string name="category_apis">APIs</string>
    <string name="category_core_concepts">Core Concepts</string>
    <string name="category_advanced">Advanced</string>
    <string name="category_general">General</string>
</resources>

